Disbaling the max height command to prevent the lack box from collapsing too much on smaller screens

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -4125,7 +4125,7 @@ height:100%;
 #slider-overlay .black-box {
   width: 60%;
   max-width: 75%;
-  max-height: 50%;
+  max-height: initial;
   top: 25%;
   left: 20%;
 }
